fix: Jobs 404 message not rendering on Safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -632,6 +632,17 @@ body.job-posts {
   }
 }
 
+/* stylelint-disable-next-line at-rule-no-vendor-prefix */
+@-webkit-keyframes cmp-jobs-message {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .jobs.active-message header {
   background-color: var(--color-base-white);
 }
